# CPP-Tests

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  main.cpp  math_operations.cpp  math_operations.hpp  test_main.cpp
